metadata в сниффере
