# internal/domain/rest/api.gen.go
@@ -112,6 +112,9 @@ type CallRecord struct {
 	// Deprecated: this property has been marked as deprecated upstream, but no `x-deprecated-reason` was set
 	Request *map[string]any `json:"request,omitempty"`
 
+	// RequestHeaders Normalized incoming gRPC metadata used for matching
+	RequestHeaders map[string]string `json:"requestHeaders,omitempty"`
+
 	// Requests Request messages for streaming calls (client stream, bidi stream)
 	Requests *[]map[string]any `json:"requests,omitempty"`
 
